--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -74,10 +74,11 @@
   color: #000;
 }
 
-.description,
-.currentDate {
+.description {
   font-family: "Temperatura", sans-serif;
   font-size: 3rem;
+}
+.currentDate {
   color: #fff;
 }
 
