--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @font-face {
   font-family: "Ciudad";
   src: url("/fonts/HeadingNowTrial-66Bold.ttf") format("truetype");
@@ -13,13 +17,6 @@
   src: url("/fonts/Nexa-Heavy.ttf") format("truetype");
 }
 
-// .video-background-container {
-//   position: relative;
-//   width: 100vw;
-//   height: 100vh;
-//   overflow: hidden;
-// }
-
 .video-background {
   position: fixed;
   top: 0;
@@ -34,30 +31,25 @@
 
 .contenido-superpuesto {
   position: relative;
-  // z-index: 1;
-  /* Tus estilos para el contenido */
 }
 
-// .ciudad {
-//   font-family: 'Ciudad', sans-serif;
-//   font-size: 2rem;
-//   letter-spacing: 1px;
-//   // font-weight: bolder;
-//   color: #000;
-//   text-align: center;
-//   margin-top: 1rem;
-// }
+.ciudad {
+  font-family: "Ciudad", sans-serif;
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  text-align: center;
+}
 
 .temperatura {
   font-family: "Temperatura", sans-serif;
   font-size: 4rem;
-  color: #000;
+  // color: #000;
 }
 
 .viento {
   font-family: "Nexa-heavy", sans-serif;
   font-size: 1rem;
-  color: #000;
+  // color: #000;
 }
 
 .tiempo {
@@ -71,7 +63,7 @@
 .forecastTitle {
   font-family: "Nexa-heavy", sans-serif;
   font-size: 1rem;
-  color: #000;
+  // color: #000;
 }
 
 .description {
@@ -79,6 +71,8 @@
   font-size: 3rem;
 }
 .currentDate {
+  font-family: "Nexa-heavy", sans-serif;
+  font-size: 2rem;
   color: #fff;
 }
 
