tipado para la carga de videos BG

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -43,13 +43,11 @@
 .temperatura {
   font-family: "Temperatura", sans-serif;
   font-size: 4rem;
-  // color: #000;
 }
 
 .viento {
   font-family: "Nexa-heavy", sans-serif;
   font-size: 1rem;
-  // color: #000;
 }
 
 .tiempo {
@@ -63,13 +61,13 @@
 .forecastTitle {
   font-family: "Nexa-heavy", sans-serif;
   font-size: 1rem;
-  // color: #000;
 }
 
 .description {
   font-family: "Temperatura", sans-serif;
   font-size: 3rem;
 }
+
 .currentDate {
   font-family: "Nexa-heavy", sans-serif;
   font-size: 2rem;
@@ -79,5 +77,5 @@
 .temperaturaHourly {
   font-family: "Temperatura", sans-serif;
   font-size: 1rem;
-  color: #ffffff;
+  color: #fff;
 }
